...

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_input_add"
            android:id="@+id/floatingActionButton"
            android:onClick="fabButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" />

...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:overScrollMode="always"
                android:clipChildren="false">

...
                        android:layout_marginTop="2dp"
                        android:fontFamily="sans-serif"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/titleText" />

                <TextView
                        android:id="@+id/streakCounter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="2dp"
                        android:height="32dp"
                        android:clickable="true"
...
                        android:text="0"
                        android:textAlignment="center"
                        android:textSize="26sp"
                        app:flow_horizontalAlign="center"
                        app:flow_verticalAlign="center"
                        app:layout_constraintBottom_toBottomOf="@+id/streakButton"
                        app:layout_constraintEnd_toStartOf="@+id/archiveButton" />

                <ImageButton
                        android:layout_width="23dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="24dp"
                        app:layout_constraintEnd_toStartOf="@+id/streakCounter"
...
