...
            android:onClick="onDeleteButton"
            android:src="@drawable/ic_baseline_delete_24" />

    <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/settingsButton"
            android:background="?android:selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:paddingTop="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
...
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="Archive"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/goBackToMainButton"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="32sp" />

    <ImageButton
            android:id="@+id/goBackToMainButton"
            android:layout_width="28dp"
...
