<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true"
        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="0dp"
        style="@style/CardView.DayNight"
        app:contentPaddingTop="10dp"
        app:contentPaddingBottom="10dp"
        android:layout_marginHorizontal="16dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/archiveLinearLayout"
            android:animateLayoutChanges="true"
            android:layout_marginRight="4dp">


        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nameView"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="18sp"
                    android:layout_marginVertical="0dp"
                    android:baselineAligned="false"
                    android:gravity="center_vertical" />

            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/replayTextView"
                    android:visibility="visible"
                    android:fontFamily="sans-serif" />
        </LinearLayout>

        <ImageButton
                android:layout_width="30dp"
                android:layout_height="48dp"
                android:id="@+id/replayButton"
                android:layout_weight="0"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:src="@drawable/ic_baseline_replay_24"
                android:background="?android:selectableItemBackgroundBorderless"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:layout_marginRight="4dp" />

        <CheckBox
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/deleteCheckBox"
                android:paddingLeft="16dp"
                android:paddingRight="4dp"
                android:layout_weight="0"
                android:visibility="visible" />

    </LinearLayout>

</androidx.cardview.widget.CardView>